# en-tox

./: CITATION.cff  README.md
article/code/: aspis_updated.ipynb  cypher_queries.txt  read.me  requirements.txt  utils.py
article/data/: AspisChemList.csv  aop_ke_mie_ao_liver.csv  aspis_abstracts_updated.csv  aspis_en_tox_compound_match_updated_cap.csv  read.me
container/: Dockerfile  app.py  decorators.py  main.py  pyproject.toml
container/templates/: index.html
